# za-zombie

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/: settings.yml
za_zombie/: __init__.py  download.py  log.py  main.py  prompt.py  tags.py
